--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "html5-file-selector": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-scripts": "5.0.0",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
